--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -11,4 +11,9 @@ jobs:
       - name: multiline script
         run: |
           node -v
-          npm -v
+          npm -
+      - name: pyhton Command
+        run: | 
+          import platform 
+          print(platform.processor())
+        shell: pyhton
